# src/main/resources/openapi.yml
@@ -78,6 +78,57 @@ paths:
             text/plain:
               schema:
                 type: string
+  /upload:
+    post:
+      summary: uploadFile
+      operationId: uploadFile
+      tags:
+      - file
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: string
+              properties:
+                fileName:
+                  type: string
+                  format: binary
+#      parameters:
+#        - in: query
+#          name: pathToFiles
+#          schema:
+#            type: string
+#          description: The path to the folder
+#      summary: uploadFile
+#      operationId: uploadFile
+#      tags:
+#        - file
+#      requestBody:
+#        content:
+#          multipart/form-data:
+#            schema:
+#              type: object
+#              properties:
+#                # The property name 'file' will be used for all files.
+#                file:
+#                  type: array
+#                  items:
+#                    type: string
+#                    format: binary
+      responses:
+        200:
+          description: successful operation
+#          content:
+#            text/plain:
+#              schema:
+##                type: string
+#                properties:
+#                  # The property name 'file' will be used for all files.
+#                  file:
+#                    type: array
+#                    items:
+#                      type: string
+#                      format: binary
 #    post:
 #      summary: Add a Book
 #      operationId: addBook
